--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Testimonial Slider</title>
   </head>
   <body>
-    <div class="testimonial"></div>
+    <div class="testimonial-container">
+      <img
+        src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="User image"
+      />
+    </div>
   </body>
 </html>
