--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="User image"
       />
+      <p class="text">
+        I am extremely satisfied with the exceptional quality of mobile phones
+        from apple. The sleek design and innovative features make it a top
+        choice for tech enthusiasts like myself. I highly recommend apple to
+        anyone looking for a reliable and stylish mobile phone.
+      </p>
     </div>
   </body>
 </html>
