Add h4 tag to html doc

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         choice for tech enthusiasts like myself. I highly recommend apple to
         anyone looking for a reliable and stylish mobile phone.
       </p>
+      <h4 class="username">Emily Johnson</h4>
     </div>
   </body>
 </html>
