Add general changes in css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testimonial Slider</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="testimonial-container">
@@ -14,9 +14,7 @@
       />
       <p class="text">
         I am extremely satisfied with the exceptional quality of mobile phones
-        from apple. The sleek design and innovative features make it a top
-        choice for tech enthusiasts like myself. I highly recommend apple to
-        anyone looking for a reliable and stylish mobile phone.
+        from apple.
       </p>
       <h4 class="username">Emily Johnson</h4>
     </div>
