--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       </p>
       <h4 class="username">Emily Johnson</h4>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
